# python-project-52

./: .env  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: __init__.py  forms.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_label_time_create_label_time_update.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py  0003_task_label_alter_task_author.py  0004_rename_task_perfomer_task_executor.py  0005_rename_label_task_labels.py
task_manager/templates/: base.html  form.html  index.html  login.html
task_manager/templates/includes/: nav.html
task_manager/templates/labels/: index.html  label_delete.html
task_manager/templates/statuses/: index.html  status_delete.html
task_manager/templates/tasks/: index.html  task.html  task_delete.html
task_manager/templates/users/: create.html  index.html  update.html  user_delete.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/users/fixtures/: testdata.json
task_manager/users/migrations/: 0001_initial.py
